# Urr

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
docs/: Doxyfile.in
include/ur/: board.h  game.h  player.h  players.h  ur.h  utils.h
include/ur/players/: base.h  computer.h  human.h  random.h
src/: board.cpp  game.cpp  main.cpp  player.cpp  utils.cpp
src/players/: computer.cpp  human.cpp  random.cpp
